# stjames-public

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  test.py
.github/workflows/: python-publish.yml  test.yml
stjames/: __init__.py  _basis_sets_kestrel.txt  _deprecated_solvent_settings.py  atom.py  base.py  basis_set.py  basis_sets.txt  calculation.py  compute_settings.py  constraint.py  correction.py  corrections.py  diis_settings.py  dna.py  engine.py  grid_settings.py  int_settings.py  message.py  method.py  methods.py  modes.py  molecule.py  opt_settings.py  pdb.py  periodic_cell.py  protein.py  rna.py  scf_settings.py  settings.py  solvent.py  solvent_settings.py  status.py  task.py  tasks.py  thermochem_settings.py  types.py
stjames/atomium_stjames/: __init__.py  base.py  data.py  mmcif.py  mmtf.py  pdb.py  structures.py  utilities.py
stjames/data/: __init__.py  bragg_radii.csv  bragg_radii.json  elements.py  isotopes.json  nist_isotopes.json  nist_isotopes.txt  read_nist_isotopes.py  symbol_element.json  utils.py
stjames/optimization/: freezing_string_method.py
stjames/workflows/: __init__.py  admet.py  basic_calculation.py  batch_docking.py  bde.py  cell_membrane_permeability.py  conformer.py  conformer_search.py  descriptors.py  dna.py  docking.py  double_ended_ts_search.py  electronic_properties.py  free_energy_perturbation.py  fukui.py  hydrogen_bond_basicity.py  ion_mobility.py  irc.py  macropka.py  membrane_permeability.py  molecular_dynamics.py  msa.py  multistage_opt.py  nmr.py  pka.py  pose_analysis_md.py  protein.py  protein_binder_design.py  protein_cofolding.py  protein_generation.py  redox_potential.py  relative_binding_free_energy_perturbation.py  rna.py  scan.py  solubility.py  solvent_dependent_conformers.py  spin_states.py  strain.py  structure_prediction.py  tautomer.py  (+1 more)
tests/: test_constraints.py  test_from_extxyz.py  test_molecule.py  test_pdb.py  test_rounding.py  test_settings.py
tests/data/: 1ema.cif
tests/workflows/: double_ended_ts_search.py  test_admet.py  test_basic_calculation.py  test_bde.py  test_conformer_search.py  test_docking.py  test_electronic_properties.py  test_fukui.py  test_ion_mobility.py  test_irc.py  test_md.py  test_multistage_opt.py  test_multistage_opt_workflow.py  test_nmr.py  test_pka.py  test_pose_analysis_md.py  test_redox_potential.py  test_scan.py  test_spin_states.py
