[project]
name = "stjames"
version = "0.0.108"
description = "standardized JSON atom/molecule encoding scheme"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Corin Wagen", email = "corin@rowansci.com" },
]

dependencies = [
    "pydantic>=2.4",
    "numpy",
    "requests",
    "rdkit",
    "more-itertools",
]

[build-system]
# maybe will want to move away from setuptools eventually
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/rowansci/stjames"
"Bug Tracker" = "https://github.com/rowansci/stjames/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["stjames", "stjames.*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "W",  # pycodestyle warnings
]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["stjames", "tests"]
addopts = "--doctest-modules --durations=5 -m 'not regression'"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = [
  "smoke: sanity tests to reveal simple failures",
  "regression: tests to make sure bugs stay closed",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
